--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,8 @@
         <picture>
           <source media="(min-width: 1400px)" srcset="img/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38"
+            alt="Логотип Кэт энерджи">
         </picture>
       </a>
       <a class="main-header__logo-secondary">
@@ -28,17 +29,17 @@
             Открыть меню
           </span>
         </button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item ">
-              <a class="site-list__link" href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item site-list__item--current">
-              <a class="site-list__link">Каталог продукции</a>
-            </li>
-            <li class="site-list__item ">
-              <a class="site-list__link" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item ">
+            <a class="site-list__link" href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item site-list__item--current">
+            <a class="site-list__link">Каталог продукции</a>
+          </li>
+          <li class="site-list__item ">
+            <a class="site-list__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -215,64 +216,65 @@
       </div>
     </section>
 
-      <section class="extra-goods">
-        <div class="extra-goods__wrapper container-content">
-          <h2 class="extra-goods__title section-title">Дополнительные товары</h2>
-          <div class="extra-goods__content-wrapper">
-            <ul class="extra-goods__list">
-              <li class="extra-goods__item extra-goods-item">
-                <div class="extra-goods-item__content-wrapper">
-                  <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
-                  <p class="extra-goods-item__description">1 упаковка (100 г)
-                    <span class="extra-goods-item__value">200 Р.</span>
-                  </p>
-                </div>
-                <button class="extra-goods-item__button button" type="button">Заказать</button>
-              </li>
+    <section class="extra-goods">
+      <div class="extra-goods__wrapper container-content">
+        <h2 class="extra-goods__title section-title">Дополнительные товары</h2>
+        <div class="extra-goods__content-wrapper">
+          <ul class="extra-goods__list">
+            <li class="extra-goods__item extra-goods-item">
+              <div class="extra-goods-item__content-wrapper">
+                <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
+                <p class="extra-goods-item__description">1 упаковка (100 г)
+                  <span class="extra-goods-item__value">200 Р.</span>
+                </p>
+              </div>
+              <button class="extra-goods-item__button button" type="button">Заказать</button>
+            </li>
 
-              <li class="extra-goods__item extra-goods-item">
-                <div class="extra-goods-item__content-wrapper">
+            <li class="extra-goods__item extra-goods-item">
+              <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Питьевая вода</h3>
                 <p class="extra-goods-item__description">5 литров
                   <span class="extra-goods-item__value">50 Р.</span>
                 </p>
               </div>
-                <button class="extra-goods-item__button button" type="button">Заказать</button>
-              </li>
+              <button class="extra-goods-item__button button" type="button">Заказать</button>
+            </li>
 
-              <li class="extra-goods__item extra-goods-item">
-                <div class="extra-goods-item__content-wrapper">
+            <li class="extra-goods__item extra-goods-item">
+              <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Молоко</h3>
                 <p class="extra-goods-item__description">1 литр
                   <span class="extra-goods-item__value">100 Р.</span>
                 </p>
               </div>
-                <button class="extra-goods-item__button button" type="button">Заказать</button>
-              </li>
+              <button class="extra-goods-item__button button" type="button">Заказать</button>
+            </li>
 
-              <li class="extra-goods__item extra-goods-item">
-                <div class="extra-goods-item__content-wrapper">
+            <li class="extra-goods__item extra-goods-item">
+              <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Витамины</h3>
                 <p class="extra-goods-item__description">1 упаковка (30 г)
                   <span class="extra-goods-item__value">300 Р.</span>
                 </p>
               </div>
-                <button class="extra-goods-item__button button" type="button">Заказать</button>
-              </li>
-            </ul>
-            <div class="special-offer">
-              <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
-                alt="Логотип подарка">
-              <p class="special-offer__description">Закажите все и получите чехол для кота в подарок!</p>
-            </div>
+              <button class="extra-goods-item__button button" type="button">Заказать</button>
+            </li>
+          </ul>
+          <div class="special-offer">
+            <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
+              alt="Логотип подарка">
+            <p class="special-offer__description">Закажите все и получите чехол для кота в подарок!</p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
     <section class="cooperation cooperation--gray">
       <div class="cooperation__wrapper container-content">
         <h2 class="cooperation__title">приглашаем к&nbsp;сотрудничеству дилеров!</h2>
-        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__city">Санкт-Петербург</span></p>
+        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span
+            class="cooperation__city">Санкт-Петербург</span></p>
       </div>
       <div class="cooperation__map-wrapper">
         <iframe
