--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,8 @@
         <picture>
           <source media="(min-width: 1400px)" srcset="img/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38"
+            alt="Логотип Кэт энерджи">
         </picture>
       </a>
       <a class="main-header__logo-secondary">
@@ -28,17 +29,17 @@
             Открыть меню
           </span>
         </button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item ">
-              <a class="site-list__link" href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="site-list__item site-list__item--current">
-              <a class="site-list__link">Подбор программы</a>
-            </li>
-          </ul>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item ">
+            <a class="site-list__link" href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item site-list__item--current">
+            <a class="site-list__link">Подбор программы</a>
+          </li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -55,11 +56,13 @@
             <legend class="visually-hidden">Кошачьи данные</legend>
             <div class="details__item">
               <label class="details__item-name" for="details-name">Имя:*</label>
-              <input class="details__item-text" type="text" name="details-name" id="form-name" placeholder="Барсик" required>
+              <input class="details__item-text" type="text" name="details-name" id="form-name" placeholder="Барсик"
+                required>
             </div>
             <div class="details__item">
               <label class="details__item-name" for="details-weight">Вес (кг):*</label>
-              <input class="details__item-text" type="number" name="details-weight" id="details-weight" placeholder="7" required>
+              <input class="details__item-text" type="number" name="details-weight" id="details-weight" placeholder="7"
+                required>
             </div>
             <div class="details__item">
               <label class="details__item-name" for="details-age">Возраст (лет):</label>
@@ -99,10 +102,11 @@
           <div class="form-contact__item">
             <label class="form-contact__item-name" for="email">E-mail:*</label>
             <div class="form-contact__item-wrapper item-wrapper">
-              <input class="form-contact__input-detail" type="email" placeholder="kuklachev@gmail.com" name="email" id="email"
-                required>
+              <input class="form-contact__input-detail" type="email" placeholder="kuklachev@gmail.com" name="email"
+                id="email" required>
 
-              <svg class="form-contact__email-logo" width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="form-contact__email-logo" width="19" height="14" viewBox="0 0 19 14" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path stroke="#222" stroke-width="1.3"
                   d="M.65 5.848v8M17.65 5.848v8M0 13.198h18M0 1.198h18M17.35 3.03 9 9.524.65 3.03V1.498h16.7V3.03Z" />
               </svg>
@@ -112,10 +116,11 @@
           <div class="form-contact__item">
             <label class="form-contact__item-name" for="phone">Телефон:*</label>
             <div class="form-contact__item-wrapper item-wrapper">
-              <input class="form-contact__input-detail" type="tel" placeholder="8 (960) 900-60-90" name="phone" id="phone"
-                required>
+              <input class="form-contact__input-detail" type="tel" placeholder="8 (960) 900-60-90" name="phone"
+                id="phone" required>
 
-              <svg class="form-contact__phone-logo" width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="form-contact__phone-logo" width="20" height="21" viewBox="0 0 20 21" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#a)" fill="#000">
                   <path
                     d="M17.9 9.753H9.4v1.204h8.5l-2.1 2.107.9.903 3.1-3.11a.754.754 0 0 0 0-.904l-3.1-3.11-.9.903 2.1 2.007ZM8.1 19.787v-6.221a.653.653 0 0 0-.6-.602H3.1a1.226 1.226 0 0 0 1.2 1.204h2.5v5.017H3.1a1.784 1.784 0 0 1-1.728-1.02 1.801 1.801 0 0 1-.172-.686V3.431a1.78 1.78 0 0 1 .483-1.25A1.767 1.767 0 0 1 2.9 1.624h3.9v5.017H4.4a1.218 1.218 0 0 0-1.2 1.204h4.4a.649.649 0 0 0 .6-.602V.923A.863.863 0 0 0 7.5.32H3.1a2.99 2.99 0 0 0-2.151.81A3.01 3.01 0 0 0 0 3.23v13.948a2.91 2.91 0 0 0 .772 2.192 2.89 2.89 0 0 0 2.128.919h4.6a.499.499 0 0 0 .6-.502Z" />
@@ -142,28 +147,32 @@
           <ul class="form-additionally__list">
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request" checked>
+                <input class="form-additionally__control-input visually-hidden" type="checkbox"
+                  name="additional-request" checked>
                 <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Сахарозаменитель</span>
               </label>
             </li>
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request">
+                <input class="form-additionally__control-input visually-hidden" type="checkbox"
+                  name="additional-request">
                 <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Питьевая вода</span>
               </label>
             </li>
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request">
+                <input class="form-additionally__control-input visually-hidden" type="checkbox"
+                  name="additional-request">
                 <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Молоко</span>
               </label>
             </li>
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request">
+                <input class="form-additionally__control-input visually-hidden" type="checkbox"
+                  name="additional-request">
                 <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Витамины</span>
               </label>
@@ -183,7 +192,8 @@
     <section class="cooperation cooperation--gray">
       <div class="cooperation__wrapper container-content">
         <h2 class="cooperation__title">приглашаем к&nbsp;сотрудничеству дилеров!</h2>
-        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__city">Санкт-Петербург</span></p>
+        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span
+            class="cooperation__city">Санкт-Петербург</span></p>
       </div>
       <div class="cooperation__map-wrapper">
         <iframe
