--- a/source/index.html
+++ b/source/index.html
@@ -15,33 +15,34 @@
         <picture>
           <source media="(min-width: 1400px)" srcset="img/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38"
+            alt="Логотип Кэт энерджи">
         </picture>
       </a>
       <a class="main-header__logo-secondary" href="index.html">
         <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
           alt="Кэт энерджи">
       </a>
-        <nav class="main-nav main-nav--closed main-nav--nojs">
-          <button class="main-nav__toggle" type="button">
-            <span class="visually-hidden">
-              Открыть меню
-            </span>
-          </button>
-          <div class="main-nav-wrapper">
-            <ul class="main-nav__list site-list site-list--white">
-              <li class="site-list__item site-list__item--current site-list__item-white">
-                <a class="site-list__link site-list__link--white">Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link site-list__link--white" href="catalog.html">Каталог продукции</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link site-list__link--white" href="form.html">Подбор программы</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">
+            Открыть меню
+          </span>
+        </button>
+        <div class="main-nav-wrapper">
+          <ul class="main-nav__list site-list site-list--white">
+            <li class="site-list__item site-list__item--current site-list__item-white">
+              <a class="site-list__link site-list__link--white">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--white" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--white" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
   </header>
 
@@ -58,7 +59,7 @@
           <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png" width="552" height="499">
           <source media="(min-width: 768px)" srcset="img/index-can-tablet.png" width="709" height="609">
           <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270"
-          alt="Банка кошачьей еды">
+            alt="Банка кошачьей еды">
         </picture>
 
         <a class="search-form__button button" href="form.html">подобрать программу</a>
@@ -147,17 +148,27 @@
         <div class="example__range-slider-wrapper">
           <div class="example__range-slider">
             <div class="example__image-wrapper image-cat-before">
-              <img class="example__image " src="img/cat-example-before@1x.jpg" width="280" height="256" alt="толстый кот">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/cat-example-before@2x.png" width="560" height="512">
+                <img class="example__image example__image--before" src="img/cat-example-before@1x.png" width="280"
+                  height="256" alt="толстый кот">
+              </picture>
             </div>
 
             <div class="example__image-wrapper image-cat-after">
-              <img class="example__image " src="img/cat-example-after@1x.jpg" width="280" height="256" alt="худой кот">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/cat-example-after@2x.png" width="560" height="512">
+                <img class="example__image example__image--after" src="img/cat-example-after@1x.png" width="280"
+                  height="256" alt="худой кот">
+              </picture>
             </div>
 
             <div class="example__range-scale-bar">
               <div class="example__range-scale-circle">
                 <button class="example__range-scale-button" type="button">
-                  <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 0 0 9l8 9V0ZM24 9l-8-9v18l8-9Z" fill="#666"/></svg>
+                  <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8 0 0 9l8 9V0ZM24 9l-8-9v18l8-9Z" fill="#666" />
+                  </svg>
                 </button>
               </div>
             </div>
