--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Кэт энерджи</title>
 </head>
 
@@ -56,9 +60,9 @@
           Занялся собой? Займись котом!
         </p>
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png" width="552" height="499">
-          <source media="(min-width: 768px)" srcset="img/index-can-tablet.png" width="709" height="609">
-          <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270"
+          <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x" width="552" height="499">
+          <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x" width="709" height="609">
+          <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270" srcset="img/index-can-mobile@2x.png 2x"
             alt="Банка кошачьей еды">
         </picture>
 
@@ -149,7 +153,7 @@
           <div class="example__range-slider">
             <div class="example__image-wrapper image-cat-before">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/cat-example-before-tablet.png 1x, img/cat-example-before-tablet@2x.png 2x" width="560" height="512">
+                <source media="(min-width: 768px)" srcset="img/cat-example-before-tablet.png 1x, img/cat-example-before-tablet@2x.png 2x">
                 <img class="example__image example__image--before" src="img/cat-example-before-mobile.png" width="280"
                   height="256" srcset="img/cat-example-before-mobile@2x.png 2x" alt="толстый кот">
               </picture>
@@ -157,7 +161,7 @@
 
             <div class="example__image-wrapper image-cat-after">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/cat-example-after-tablet.png 1x, img/cat-example-after-tablet@2x.png 2x" width="560" height="512">
+                <source media="(min-width: 768px)" srcset="img/cat-example-after-tablet.png 1x, img/cat-example-after-tablet@2x.png 2x">
                 <img class="example__image example__image--after" src="img/cat-example-after-mobile.png" width="280"
                   height="256" srcset="img/cat-example-after-mobile@2x.png 2x" alt="худой кот">
               </picture>
