--- a/source/index.html
+++ b/source/index.html
@@ -89,7 +89,7 @@
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy
               Slim поможет вашему питомцу сбросить лишний вес.
             </p>
-            <a class="programs__link" href="#">каталог slim</a>
+            <a class="programs__link programs__link--slim" href="#">каталог slim</a>
           </li>
           <li class="programs__item programs__item--weight-gain">
             <h3 class="programs__title">Набор массы</h3>
@@ -97,7 +97,7 @@
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту
               нарастить необходимые мышцы!
             </p>
-            <a class="programs__link" href="#">каталог pro</a>
+            <a class="programs__link programs__link--pro" href="#">каталог pro</a>
           </li>
         </ul>
       </div>
